crates/test-files/fixtures/compile_errors/call_trait_assoc_fn_on_invisible_type/src/foo.fe
pub trait DoThing {
  fn do();
}

struct Bar {}

impl DoThing for Bar {
  fn do() {
  }
}


